--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
-
+@import 'modale';
 
 :root  {
     font-family: 'Space Mono', sans-serif;
@@ -72,7 +72,7 @@ body{
     
   
    h1{
-    margin-top: 0;
+   
     display: flex;
     align-items: center;
     justify-content: center;
@@ -81,6 +81,8 @@ body{
     color: transparent;
     font-style:oblique;
     font-weight:500;
+   
+    
    }
 }
 
