--- a/css/main.css
+++ b/css/main.css
@@ -4,11 +4,14 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  background: rgba(0, 0, 0, 0.3764705882);
   display: flex;
   justify-content: center;
   align-items: center;
   top: 0;
   left: 0;
+  z-index: 999;
+  cursor: pointer;
 }
 
 /* Modal Content/Box */
@@ -18,27 +21,13 @@
   padding-top: 250px;
   border: 2px solid black;
   width: 50%; /* Could be more or less, depending on screen size */
-  z-index: 1;
-}
-
-/* The Close Button */
-.popup-close {
-  position: absolute;
-  right: 320px;
-  top: 10px;
-  height: 50px;
-  width: 50px;
-  font-weight: bold;
-  cursor: pointer;
-  display: flex;
   justify-content: center;
+  display: flex;
   align-items: center;
-  transition: all 0.4s ease;
+  flex-direction: column;
 }
-
 .wpcf7 {
   position: absolute;
-  z-index: 2;
   padding-top: 130px;
 }
 
@@ -118,15 +107,23 @@ body {
   margin-top: 10px;
 }
 
+.banner {
+  text-align: center;
+}
+.banner img {
+  width: 100%;
+  position: relative;
+}
 .banner h1 {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 80px;
-  -webkit-text-stroke: 1px black;
+  font-size: 100px;
+  -webkit-text-stroke: 1px white;
   color: transparent;
   font-style: oblique;
   font-weight: 500;
+  top: 60%;
+  left: 100px;
+  right: 100px;
+  position: absolute;
 }
 
 /*# sourceMappingURL=main.css.map */
