--- a/sass/modale.scss
+++ b/sass/modale.scss
@@ -6,12 +6,15 @@
     position:fixed;
     width:100%;
     height:100%;
-    
+    background:#00000060;
     display:flex;
     justify-content: center;
     align-items:center;
     top:0;
     left:0;
+    z-index: 999;
+    cursor: pointer;
+   
   
    
 }
@@ -19,35 +22,45 @@
 /* Modal Content/Box */
 .popup-contact {
     background-color: #fefefe;
- 
     padding-bottom: 400px;
     padding-top: 250px;
     border: 2px solid black;
     width: 50%; /* Could be more or less, depending on screen size */
-    z-index: 1;
-   
+   justify-content:center ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
   
-}
 
-/* The Close Button */
- .popup-close {
-    position:absolute;
-    right:320px;
-    top: 10px;
+
+    img{
+       
+ 
+    }
+   
+}
   
-    height:50px;
-    width:50px;
-    font-weight: bold;
-    cursor:pointer;
-    display:flex;
-    justify-content:center;
-    align-items:center;
-    transition:all 0.4s ease;
-} 
+
+
+// /* The Close Button */
+//  .popup-close {
+//     position:absolute;
+//     right:320px;
+//     top: 10px;
+  
+//     height:50px;
+//     width:50px;
+//     font-weight: bold;
+//     cursor:pointer;
+//     display:flex;
+//     justify-content:center;
+//     align-items:center;
+//     transition:all 0.4s ease;
+// } 
 
 .wpcf7 {
     position: absolute;
-    z-index: 2;
+  
     padding-top: 130px;
    
 }
