--- a/css/main.css
+++ b/css/main.css
@@ -17,35 +17,51 @@
 /* Modal Content/Box */
 .popup-contact {
   background-color: #fefefe;
-  padding-bottom: 400px;
-  padding-top: 250px;
-  border: 2px solid black;
-  width: 50%; /* Could be more or less, depending on screen size */
-  justify-content: center;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
+  height: 620px;
+  border: 4px solid black;
+  width: 45%; /* Could be more or less, depending on screen size */
+  animation: fadein 3s forwards;
 }
+@keyframes fadein {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.popup-contact .contact {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  width: 100%;
+}
+
 .wpcf7 {
   position: absolute;
-  padding-top: 130px;
+  height: 300px;
+  padding-top: 110px;
+  padding-bottom: 50px;
 }
 
 .wpcf7-form-control {
   height: 40px;
-  border-radius: 5px;
+  border-radius: 6px;
   border: 1px solid #B8BBC2;
   width: 100%;
 }
 
 .input-msg .wpcf7-form-control {
-  height: 150px;
+  height: 130px;
   width: 100%;
 }
 
 .wpcf7-submit {
-  height: 50px;
+  height: 40px;
   width: 100%;
+  border-radius: 3px;
 }
 
 :root {
