--- a/css/main.css
+++ b/css/main.css
@@ -5,13 +5,13 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.3764705882);
-  display: flex;
   justify-content: center;
   align-items: center;
-  top: 0;
+  top: 10px;
   left: 0;
   z-index: 999;
   cursor: pointer;
+  display: none;
 }
 
 /* Modal Content/Box */
@@ -19,7 +19,8 @@
   background-color: #fefefe;
   height: 620px;
   border: 4px solid black;
-  width: 45%; /* Could be more or less, depending on screen size */
+  overflow: hidden;
+  width: 44%; /* Could be more or less, depending on screen size */
   animation: fadein 3s forwards;
 }
 @keyframes fadein {
