--- a/css/main.css
+++ b/css/main.css
@@ -65,12 +65,73 @@
   border-radius: 3px;
 }
 
+.post-content {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 15px;
+  /* -webkit-box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.2);
+    -moz-box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.2);
+         box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.1); */
+}
+.post-content .post-title {
+  font-size: 40px;
+  font-style: italic;
+  margin-bottom: 6px;
+}
+.post-content .post-meta {
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
+  width: 50%;
+  margin-left: 100px;
+  margin-bottom: 6px;
+  margin-right: 16px;
+  border-bottom: 1px solid black;
+}
+.post-content .post-meta .meta {
+  padding-bottom: 15px;
+}
+.post-content .post-meta .date {
+  margin-bottom: 20px;
+}
+
+.container-img {
+  margin-right: 100px;
+}
+.container-img .post-image {
+  max-width: 100%;
+  height: auto;
+}
+
+/* .attachment-large{
+    margin-right: 100px;
+
+} */
+.contact_btn {
+  margin-top: 40px;
+  display: flex;
+  align-items: center;
+  margin-left: 100px;
+  margin-bottom: 40px;
+  border-bottom: 1px solid black;
+  margin-right: 100px;
+}
+.contact_btn .txt-contact {
+  text-transform: none;
+}
+.contact_btn form input {
+  margin-left: 50px;
+  padding: 10px 80px;
+  cursor: pointer;
+}
+
 :root {
   font-family: "Space Mono", sans-serif;
 }
 
 body {
   margin: 0;
+  text-transform: uppercase;
 }
 
 #navigation {
@@ -80,7 +141,7 @@ body {
   height: 80px;
   margin-top: -8px;
   width: 100%;
-  background: blue;
+  background: red;
 }
 #navigation #logo {
   height: 13px;
