--- a/sass/single.scss
+++ b/sass/single.scss
@@ -1,14 +1,33 @@
 
 .post-content{
    display: flex;
-   justify-content: space-around;
+   justify-content: space-between;
    margin-top: 15px;
-//    width: 100%;
-//    border-top: 4px solid transparent; /* Bordure supérieure */
-   /* -webkit-box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.2);
-     -moz-box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.2);
-          box-shadow: 0 9px 7px 2px rgba(0, 0, 0, 0.1); */
+    
 
+ width: 100%;
+
+
+          .post-meta{
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            width: 50%;
+            margin-left: 100px;
+            margin-bottom: 6px;
+            margin-right: 16px;
+            
+            border-bottom: 1px solid black;
+            
+            
+                    .meta{
+                        padding-bottom: 15px;
+                    }
+                    .date{
+                        margin-bottom: 20px;
+                    }
+                   
+                }   
    .post-title {
     font-size: 40px;
     font-style: italic;
@@ -22,41 +41,18 @@
    }
   
 
-   .post-meta{
-display: flex;
-flex-direction: column;
-justify-content: end;
-width: 50%;
-margin-left: 100px;
-margin-bottom: 6px;
-margin-right: 16px;
 
-border-bottom: 1px solid black;
-
-
-        .meta{
-            padding-bottom: 15px;
-        }
-        .date{
-            margin-bottom: 20px;
-        }
-       
-    }   
 }
 
 .container-img{
-    margin-right: 100px;
+margin-right: 100px;
+  width: 50%;
+    
    
-
-    .post-image{
-        max-width: 100%;
-        height: auto;
-    }
+.attachment-large {
+    width: 100%;
 }
-/* .attachment-large{
-    margin-right: 100px;
-
-} */
+}
 
 
 .contact_btn{
