--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
 @import 'modale';
 @import 'single';
+@import 'navigation';
 
 :root  {
     font-family: 'Space Mono', sans-serif;
