--- a/sass/single.scss
+++ b/sass/single.scss
@@ -55,24 +55,60 @@ margin-right: 100px;
 }
 
 
+.containerBtn{
+     display: flex;
+    justify-content: space-between;
+  width: 100%;
+padding-right: 0;
 .contact_btn{
-    margin-top: 40px;
+    margin-top: -40px;
     display: flex;
     align-items: center;
+   justify-content: space-between;
     margin-left : 100px;
-    margin-bottom: 40px;
-    border-bottom: 1px solid black;
-    margin-right: 100px;
+    
+
 
     .txt-contact{
         text-transform: none;
     }
 
-
     form
     input{
-        margin-left: 50px;
         padding: 10px 80px;
         cursor: pointer;
+        margin-left: 135px;
+        
     }
 }
+
+.post-carousel{
+    width: 80px;
+    margin-right: 100px;
+}
+  
+    .carousel-inner{
+        width: 50%;
+
+    }
+.attachment-thumbnail {
+    max-width: none;
+    width: 80px;
+    height: auto;
+}
+
+.carousel-navigation{
+    margin-top: -10px;
+    display: flex;
+    justify-content: space-between;
+
+    .next-arrow{
+        font-size: 30px;
+    }
+    .prev-arrow{
+        font-size: 30px;
+    }
+}
+    
+}
+
