--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Space+Mono&display=swap");
 /* The Modal (background) */
 .popup-overlay {
@@ -82,10 +83,10 @@
   border-bottom: 1px solid black;
 }
 .post-content .post-meta .meta {
-  padding-bottom: 15px;
+  margin-bottom: 10px;
 }
 .post-content .post-meta .date {
-  margin-bottom: 20px;
+  margin-bottom: 45px;
 }
 .post-content .post-title {
   font-size: 40px;
@@ -96,9 +97,11 @@
 .container-img {
   margin-right: 100px;
   width: 50%;
+  object-fit: cover;
 }
 .container-img .attachment-large {
   width: 100%;
+  object-fit: cover;
 }
 
 .containerBtn {
@@ -113,6 +116,7 @@
   align-items: center;
   justify-content: space-between;
   margin-left: 100px;
+  flex-wrap: wrap;
 }
 .containerBtn .contact_btn .txt-contact {
   text-transform: none;
@@ -128,6 +132,7 @@
 }
 .containerBtn .carousel-inner {
   width: 50%;
+  object-fit: cover;
 }
 .containerBtn .attachment-thumbnail {
   max-width: none;
@@ -144,6 +149,26 @@
 }
 .containerBtn .carousel-navigation .prev-arrow {
   font-size: 30px;
+}
+
+.txt {
+  margin-left: 100px;
+  border-top: 1px solid black;
+  margin-right: 100px;
+  margin-bottom: 50px;
+}
+
+.photo-connexe {
+  display: flex;
+  justify-content: center;
+  overflow: hidden;
+  gap: 30px;
+  width: 100%;
+}
+.photo-connexe .related-photo .attachment-large {
+  width: 40vw; /* La moitié de la largeur du viewport */
+  height: 40vw; /* La moitié de la largeur du viewport, pour former un carré */
+  object-fit: cover;
 }
 
 /* .thumbnail-preview {
