--- a/sass/single.scss
+++ b/sass/single.scss
@@ -3,10 +3,7 @@
    display: flex;
    justify-content: space-between;
    margin-top: 15px;
-    
-
  width: 100%;
-
 
           .post-meta{
             display: flex;
@@ -16,56 +13,49 @@
             margin-left: 100px;
             margin-bottom: 6px;
             margin-right: 16px;
-            
             border-bottom: 1px solid black;
-            
-            
                     .meta{
-                        padding-bottom: 15px;
+                        margin-bottom: 10px;
                     }
                     .date{
-                        margin-bottom: 20px;
+                        margin-bottom: 45px;
                     }
-                   
                 }   
    .post-title {
     font-size: 40px;
     font-style: italic;
     margin-bottom: 6px ;
-
     
-  
-
-   
-   
    }
-  
-
-
 }
 
 .container-img{
 margin-right: 100px;
   width: 50%;
+  object-fit: cover;
     
    
 .attachment-large {
     width: 100%;
+    object-fit: cover;
 }
 }
-
 
 .containerBtn{
      display: flex;
     justify-content: space-between;
   width: 100%;
 padding-right: 0;
+
+
 .contact_btn{
     margin-top: -40px;
     display: flex;
     align-items: center;
    justify-content: space-between;
     margin-left : 100px;
+    flex-wrap: wrap;
+    
     
 
 
@@ -78,7 +68,7 @@ padding-right: 0;
         padding: 10px 80px;
         cursor: pointer;
         margin-left: 135px;
-        
+
     }
 }
 
@@ -89,6 +79,7 @@ padding-right: 0;
   
     .carousel-inner{
         width: 50%;
+        object-fit: cover;
 
     }
 .attachment-thumbnail {
@@ -110,5 +101,40 @@ padding-right: 0;
     }
 }
   
+}
+
+.txt{
+    margin-left: 100px;
+    border-top: 1px solid black ;
+    margin-right: 100px;
+    margin-bottom: 50px;
+   
+}
+.photo-connexe{
+display: flex;
+justify-content: center;
+overflow: hidden;
+gap: 30px;
+width: 100%;
+
+
+
+
+
+.related-photo{
+    .attachment-large  {
+        width: 40vw; /* La moitié de la largeur du viewport */
+        height: 40vw; /* La moitié de la largeur du viewport, pour former un carré */
+        object-fit: cover;
+        
+      
+       
+        
+
+     
+    }
+    
+
+}
 }
 
