--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,6 +2,7 @@
 @import 'modale';
 @import 'single';
 @import 'navigation';
+@import 'home';
 
 :root  {
     font-family: 'Space Mono', sans-serif;
