--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,7 @@
 @import 'single';
 @import 'navigation';
 @import 'home';
+@import 'overlay';
 
 :root  {
     font-family: 'Space Mono', sans-serif;
@@ -21,35 +22,86 @@ body{
     height: 80px;
     margin-top: -8px;
     width: 100%;
-  background: red;
+
+    #logo{
+        height: 13px;
+        margin-left: 100px;
+    }
+
+        .burgerMenu{
+            width: 50px;
+         display: flex;
+            cursor: pointer;
+
+             .line {
+                width: 100%;
+                height: 1.5px;
+                margin-bottom: 5px;
+                color: black;
+                // créer une animation fluide lorsque'on clique sur l'icone burger
+                transition: all 0.3s linear;
+            }
+        }
+    }
  
  
-#logo{
-    height: 13px;
-    margin-left: 100px;
-}
+ 
+
 
 .navbar-nav{
     display: flex;
     list-style: none;
     margin-right: 65px;
+    @media screen  and (max-width :785px) {
+       
+    
+        flex-direction: column;
+        z-index: 10;
+       
+      
+       
+        
+     }
+
+  }
+
     
 
     a{
         margin-right: 40px;
         text-decoration: none;
         color: black;
+        @media screen  and (max-width :785px) {
+        
+        display:flex;
+        align-items:center;
+        flex-direction: column;
     }
 }
-}
+/* .menu-full {
+    @media screen  and (max-width :785px) {
+    display: none; /* menu caché par défaut */
+  //  text-align: center;
+   // padding-top: 25px;
+   // background: red;
+   // height: 100vh;
+   // overflow: hidden;
+   // }
+//} */
+
 
 #footer{
     display: flex;
     justify-content: center;
     border-top: solid 1px black;
-  
+   
+    .footerColumn{
+        display: flex;
+        @media screen and (max-width:580px){
+    flex-direction: column;
+    }
+}
 
-    
     
 
 #menu-footer-menu{
@@ -60,8 +112,10 @@ body{
     padding: 0;
     align-items: center;
     margin-right: 25px;
-   
-
+    @media screen and (max-width:580px){
+  
+    flex-direction: column;
+    }
    
     
 
