--- a/css/main.css
+++ b/css/main.css
@@ -69,6 +69,8 @@
 .containerPost {
   margin-left: 100px;
   margin-right: 100px;
+  border-top: 1px solid blueviolet;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
 }
 .containerPost .post-content {
   display: flex;
@@ -180,6 +182,20 @@
   object-fit: cover;
 }
 
+.btn-photo {
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 90px;
+  padding-left: 90px;
+  border: none;
+  background-color: #D8D8D8;
+  border-radius: 3px;
+  cursor: pointer;
+  text-transform: none;
+  text-decoration: none;
+  color: black;
+}
+
 /* .thumbnail-preview {
     position: absolute;
     top: 0;
@@ -235,6 +251,58 @@ display: none; */
   color: black;
 }
 
+/* #overlay{
+    position: absolute;
+    top:0;
+    right:0;
+    left:0;
+    bottom: 0;
+    opacity: 0;
+    transition: opacity 0.4s ease-in-out;
+    background: black;
+    cursor: pointer;
+} */
+/* #overlay {
+    position: relative;
+
+    .overlay-link {
+        display: block; /* Assurez-vous que le lien occupe tout l'espace du conteneur */
+#overlay {
+  position: relative;
+}
+
+.overlay-effect {
+  overflow: hidden; /* Ajout de cette propriété pour empêcher le débordement */
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.overlay-link {
+  display: block;
+  position: relative;
+  z-index: 1;
+}
+.overlay-link:hover .overlay-effect {
+  opacity: 1;
+}
+.overlay-link .fa-light {
+  color: white;
+  font-size: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  text-align: center;
+}
+
 :root {
   font-family: "Space Mono", sans-serif;
 }
@@ -258,6 +326,7 @@ body {
 }
 #navigation .burgerMenu {
   width: 50px;
+  height: 50px;
   display: flex;
   cursor: pointer;
 }
@@ -265,7 +334,7 @@ body {
   width: 100%;
   height: 1.5px;
   margin-bottom: 5px;
-  color: black;
+  background-color: black;
   transition: all 0.3s linear;
 }
 
@@ -341,19 +410,20 @@ a {
   text-align: center;
 }
 .banner img {
-  width: 100%;
   position: relative;
+  height: 100vh;
+  width: 100%;
 }
 .banner h1 {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   font-size: 100px;
   -webkit-text-stroke: 1px white;
   color: transparent;
   font-style: oblique;
   font-weight: 500;
-  top: 60%;
-  left: 100px;
-  right: 100px;
-  position: absolute;
 }
 
 /*# sourceMappingURL=main.css.map */
