--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,11 +5,11 @@
 @import 'home';
 @import 'overlay';
 
-:root  {
+:root {
     font-family: 'Space Mono', sans-serif;
 }
 
-body{
+body {
     margin: 0;
     text-transform: uppercase;
 }
@@ -23,156 +23,164 @@ body{
     margin-top: -8px;
     width: 100%;
 
-    #logo{
+    #logo {
         height: 13px;
         margin-left: 100px;
     }
 
-        .burgerMenu{
-            width: 50px;
-         display: flex;
-            cursor: pointer;
+    .burgerMenu {
+        width: 50px;
+        height: 50px;
+        display: flex;
+        cursor: pointer;
 
-             .line {
-                width: 100%;
-                height: 1.5px;
-                margin-bottom: 5px;
-                color: black;
-                // créer une animation fluide lorsque'on clique sur l'icone burger
-                transition: all 0.3s linear;
-            }
+        .line {
+            width: 100%;
+            height: 1.5px;
+            margin-bottom: 5px;
+            background-color: black;
+            // créer une animation fluide lorsque'on clique sur l'icone burger
+            transition: all 0.3s linear;
         }
     }
- 
- 
- 
+}
 
 
-.navbar-nav{
+
+
+
+.navbar-nav {
     display: flex;
     list-style: none;
     margin-right: 65px;
-    @media screen  and (max-width :785px) {
-       
-    
+
+    @media screen and (max-width :785px) {
+
+
         flex-direction: column;
         z-index: 10;
-       
-      
-       
-        
-     }
 
-  }
 
-    
 
-    a{
-        margin-right: 40px;
-        text-decoration: none;
-        color: black;
-        @media screen  and (max-width :785px) {
-        
-        display:flex;
-        align-items:center;
+
+    }
+
+}
+
+
+
+a {
+    margin-right: 40px;
+    text-decoration: none;
+    color: black;
+
+    @media screen and (max-width :785px) {
+
+        display: flex;
+        align-items: center;
         flex-direction: column;
     }
 }
+
 /* .menu-full {
     @media screen  and (max-width :785px) {
     display: none; /* menu caché par défaut */
-  //  text-align: center;
-   // padding-top: 25px;
-   // background: red;
-   // height: 100vh;
-   // overflow: hidden;
-   // }
+//  text-align: center;
+// padding-top: 25px;
+// background: red;
+// height: 100vh;
+// overflow: hidden;
+// }
 //} */
 
 
-#footer{
+#footer {
     display: flex;
     justify-content: center;
     border-top: solid 1px black;
-   
-    .footerColumn{
+
+    .footerColumn {
         display: flex;
-        @media screen and (max-width:580px){
-    flex-direction: column;
-    }
-}
 
-    
-
-#menu-footer-menu{
-    display: flex;
-    justify-content: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    align-items: center;
-    margin-right: 25px;
-    @media screen and (max-width:580px){
-  
-    flex-direction: column;
-    }
-   
-    
-
-    li{
-        margin: 25px;
-        margin-bottom: 10px;
-        margin-top: 10px;
-        a{
-            color: black;
-            text-decoration: none;
-        
+        @media screen and (max-width:580px) {
+            flex-direction: column;
         }
     }
-   
-}
-.textFooter{
-    margin-top: 10px;
- 
-}
+
+
+
+    #menu-footer-menu {
+        display: flex;
+        justify-content: center;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        align-items: center;
+        margin-right: 25px;
+
+        @media screen and (max-width:580px) {
+
+            flex-direction: column;
+        }
+
+
+
+        li {
+            margin: 25px;
+            margin-bottom: 10px;
+            margin-top: 10px;
+
+            a {
+                color: black;
+                text-decoration: none;
+
+            }
+        }
+
+    }
+
+    .textFooter {
+        margin-top: 10px;
+
+    }
 
 
 }
-.banner{
 
-  text-align: center;
-  img{
-    width: 100%;
-    position: relative;
-   
-  }
-  
-   h1{
-  
-   
-  //transform: translateX(-50%);
+.banner {
 
-    font-size: 100px;
-    -webkit-text-stroke: 1px white;
-    color: transparent;
-    font-style:oblique;
-    font-weight:500;
-    top: 60%;
-    left: 100px;
-    right:100px;
-    
-    position: absolute;
-    
-//top: 50%;
-//left: 50%;
+    text-align: center;
+
+    img {
+        position: relative;
+        height: 100vh;
+      
+        width: 100%;
+
+    }
+
+    h1 {
 
 
+        //transform: translateX(-50%);
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        font-size: 100px;
+        -webkit-text-stroke: 1px white;
+        color: transparent;
+        font-style: oblique;
+        font-weight: 500;
 
-   
-    
-   }
+
+
+
+
+
+
+
+
+
+    }
 }
-
-
-
-
