intégraion html filter catégory + js et css

--- a/sass/single.scss
+++ b/sass/single.scss
@@ -3,8 +3,8 @@
 margin-left: 100px;
 margin-right: 100px;
 
-border-top: 1px solid blueviolet;
-box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+/* border-top: 1px solid blueviolet;
+box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 
 .post-content{
    display: flex;
