--- a/css/main.css
+++ b/css/main.css
@@ -69,8 +69,8 @@
 .containerPost {
   margin-left: 100px;
   margin-right: 100px;
-  border-top: 1px solid blueviolet;
-  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
+  /* border-top: 1px solid blueviolet;
+  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 }
 .containerPost .post-content {
   display: flex;
@@ -216,6 +216,7 @@ display: none; */
   display: grid;
   grid-template-columns: repeat(2, 1fr); /* Deux colonnes */
   gap: 10px; /* Espacement entre les images */
+  margin-top: 100px;
 }
 
 /* .photo-connexe{
@@ -303,6 +304,94 @@ display: none; */
   text-align: center;
 }
 
+.select-menu {
+  max-width: 25%;
+}
+.select-menu .select-btn {
+  border-top: 1px solid #D8D8D8;
+  border-bottom: 1px solid #D8D8D8;
+  border-left: 1px solid #D8D8D8;
+  border-right: 1px solid #D8D8D8;
+  border-radius: 10px;
+  display: flex;
+  height: 40px;
+  background: #fff;
+  padding-left: 10px;
+  padding-right: 10px;
+  font-size: 18px;
+  align-items: center;
+  cursor: pointer;
+  justify-content: space-between;
+}
+.select-menu .select-btn .chevron-down {
+  height: 20px;
+}
+.select-menu .options {
+  display: none;
+  overflow-y: auto;
+  max-height: 295px;
+  padding: 0;
+  position: absolute;
+  margin-top: 30px;
+  width: 25%;
+  list-style: none;
+  padding-top: 20px;
+  background: #fff;
+  animation-name: fadeInDown;
+  -webkit-animation-name: fadeInDown;
+  animation-duration: 0.35s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 0.35s;
+  -webkit-animation-fill-mode: both;
+}
+.select-menu .option {
+  display: flex;
+  height: 20px;
+  cursor: pointer;
+  padding-bottom: 20px;
+  align-items: center;
+}
+.select-menu .option:hover {
+  background-color: red;
+}
+.select-menu .option .option-text {
+  padding-left: 15px;
+}
+
+.select-menu.active .select-btn i {
+  transform: rotate(-180deg);
+}
+.select-menu.active .options {
+  display: block;
+  opacity: 0;
+  z-index: 10;
+  animation-name: fadeInUp;
+  -webkit-animation-name: fadeInUp;
+  animation-duration: 0.4s;
+  animation-fill-mode: both;
+  -webkit-animation-duration: 0.4s;
+  -webkit-animation-fill-mode: both;
+}
+
+@keyframes fadeInUp {
+  from {
+    transform: translate3d(0, 30px, 0);
+  }
+  to {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+}
+@keyframes fadeInDown {
+  from {
+    transform: translate3d(0, 0, 0);
+    opacity: 1;
+  }
+  to {
+    transform: translate3d(0, 20px, 0);
+    opacity: 0;
+  }
+}
 :root {
   font-family: "Space Mono", sans-serif;
 }
@@ -328,12 +417,13 @@ body {
   width: 50px;
   height: 50px;
   display: flex;
+  flex-direction: column;
   cursor: pointer;
 }
 #navigation .burgerMenu .line {
   width: 100%;
   height: 1.5px;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
   background-color: black;
   transition: all 0.3s linear;
 }
@@ -419,7 +509,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 100px;
+  font-size: 64px;
   -webkit-text-stroke: 1px white;
   color: transparent;
   font-style: oblique;
