--- a/sass/home.scss
+++ b/sass/home.scss
@@ -8,6 +8,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr); /* Deux colonnes */
     gap: 10px; /* Espacement entre les images */
+    margin-top: 100px;
    
 }
 
