--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import 'navigation';
 @import 'home';
 @import 'overlay';
+@import 'filter';
 
 :root {
     font-family: 'Space Mono', sans-serif;
@@ -32,12 +33,15 @@ body {
         width: 50px;
         height: 50px;
         display: flex;
+        flex-direction: column;
         cursor: pointer;
+       
+    
 
         .line {
             width: 100%;
             height: 1.5px;
-            margin-bottom: 5px;
+            margin-bottom: 10px;
             background-color: black;
             // créer une animation fluide lorsque'on clique sur l'icone burger
             transition: all 0.3s linear;
@@ -60,14 +64,9 @@ body {
         flex-direction: column;
         z-index: 10;
 
-
-
-
     }
 
 }
-
-
 
 a {
     margin-right: 40px;
@@ -167,7 +166,7 @@ a {
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        font-size: 100px;
+        font-size: 64px;
         -webkit-text-stroke: 1px white;
         color: transparent;
         font-style: oblique;
