--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -1,112 +1,200 @@
 
-.select-menu {
-    max-width: 25%;
-    
 
 
-  
-  
+
+
+@keyframes fadeInUp {
+  from {
+    transform: translateY(-30px); /* Anciennement translate3d(0, 30px, 0); */
+  }
+  to {
+    transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
+    opacity: 1;
+  }
+}
+
+
+@keyframes fadeInDown {
+  from {
+    transform: translateY(0); /* Anciennement translate3d(0, 0, 0); */
+    opacity: 1;
+  }
+  to {
+    transform: translateY(20px); /* Anciennement translate3d(0, 20px, 0); */
+    opacity: 0;
+  }
+
+}
+
+.select-cat {
+  max-width: 250px;
+
+
   .select-btn {
-    border-top: 1px solid #D8D8D8;
-    border-bottom: 1px solid #D8D8D8;
-    border-left: 1px solid #D8D8D8;
-    border-right: 1px solid #D8D8D8;
-    border-radius: 10px;
+    position: relative;
     display: flex;
-    height: 40px;
+    height: 35px;
     background: #fff;
-    padding-left: 10px;
-    padding-right: 10px;
-    font-size: 18px;
+    padding: 5px;
+    padding-left: 15px;
+    padding-right: 15px;
+    border-radius: 8px;
+    border: 2px solid #D8D8D8;
     align-items: center;
     cursor: pointer;
     justify-content: space-between;
-
-    .chevron-down{
-        height: 20px;
-    }
   }
-  
-  .options {
+
+  .list {
     display: none;
+    position: absolute;
+    width: 250px;
     overflow-y: auto;
     max-height: 295px;
-    padding: 0;
-    position: absolute;
-    margin-top: 30px;
-    
-    width: 25%;
+    margin: 0;
+    padding-top: 50px;
+    padding-left: 0;
+    z-index: 999;
+    background-color: white;
+    border-radius: 0 0 8px 8px;
+    animation: fadeInDown 3s ease-in-out;
    
-    list-style: none;
-    padding-top: 20px;
-    background: #fff;
-    animation-name: fadeInDown;
-    -webkit-animation-name: fadeInDown;
-    animation-duration: 0.35s;
-    animation-fill-mode: both;
-    -webkit-animation-duration: 0.35s;
-    -webkit-animation-fill-mode: both;
-  
-  }
-  
-  .option {
-    display: flex;
-    height: 20px;
-    
-    cursor: pointer;
-    padding-bottom: 20px;
-    align-items: center;
-      &:hover{
-        background-color: red;
 
-       
- 
+    .option {
+      padding-bottom: 10px;
+      list-style: none;
+      margin: 0;
+      padding-left: 15px;
+      padding-top: 10px;
+
+      &:hover {
+        background-color: red;
+        cursor: pointer;
+      }
+    }
   }
-  .option-text{
-    padding-left: 15px;
-    
 }
-}}
-  
-  .select-menu.active {
-    .select-btn i {
+
+
+.chevron-down {
+  transition: 0.3s;
+  height: 25px;
+}
+
+.select-cat.active {
+  .select-btn {
+    img {
       transform: rotate(-180deg);
     }
-  
-    .options {
-      display: block;
-      opacity: 0;
-      z-index: 10;
-      animation-name: fadeInUp;
-      -webkit-animation-name: fadeInUp;
-      animation-duration: 0.4s;
-      animation-fill-mode: both;
-      -webkit-animation-duration: 0.4s;
-      -webkit-animation-fill-mode: both;
-    }
-  }
-  
-  @keyframes fadeInUp {
-    from {
-      transform: translate3d(0, 30px, 0);
-    }
-  
-    to {
-      transform: translate3d(0, 0, 0);
-      opacity: 1;
-    }
-  }
-  
-  @keyframes fadeInDown {
-    from {
-      transform: translate3d(0, 0, 0);
-      opacity: 1;
-    }
-  
-    to {
-      transform: translate3d(0, 20px, 0);
-      opacity: 0;
-    }
   }
 
-   
+  .list {
+    display: block;
+    opacity: 0;
+    z-index: 10;
+    animation: fadeInUp 2s forwards;
+
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+/* $color_1: #333;
+
+@keyframes fadeInUp {
+	from {
+		transform: translate3d(0, 30px, 0);
+	}
+	to {
+		transform: translate3d(0, 0, 0);
+		opacity: 1;
+	}
+}
+@keyframes fadeInDown {
+	from {
+		transform: translate3d(0, 0, 0);
+		opacity: 1;
+	}
+	to {
+		transform: translate3d(0, 20px, 0);
+		opacity: 0;
+	}
+}
+.select-cat {
+	max-width: 230px;
+	.select-btn {
+		display: flex;
+		height: 35px;
+		background: #fff;
+		padding: 20px;
+		border-radius: 8px;
+		align-items: center;
+		cursor: pointer;
+		justify-content: space-between;
+	}
+	.list {
+		position: absolute;
+		width: 230px;
+		overflow-y: auto;
+		max-height: 295px;
+		border-radius: 8px;
+		background: #fff;
+		animation-name: fadeInDown;
+		-webkit-animation-name: fadeInDown;
+		animation-duration: 0.35s;
+		animation-fill-mode: both;
+		-webkit-animation-duration: 0.35s;
+		-webkit-animation-fill-mode: both;
+		.option {
+			display: flex;
+			height: 55px;
+			cursor: pointer;
+			padding: 0 16px;
+			align-items: center;
+			background: #fff;
+			&:hover {
+				background: red;
+			}
+			i {
+				font-size: 25px;
+				margin-right: 12px;
+			}
+			.option-text {
+				font-size: 18px;
+				color: $color_1;
+			}
+		}
+	}
+}
+.select-btn {
+	i {
+		font-size: 25px;
+		transition: 0.3s;
+	}
+}
+.select-cat.active {
+	.select-btn {
+		i {
+			transform: rotate(-180deg);
+		}
+	}
+	.list {
+		display: block;
+		opacity: 0;
+		z-index: 10;
+		animation-name: fadeInUp;
+		-webkit-animation-name: fadeInUp;
+		animation-duration: 0.4s;
+		animation-fill-mode: both;
+		-webkit-animation-duration: 0.4s;
+		-webkit-animation-fill-mode: both;
+	}
+} */
