menu burger responsive  + css + js

--- a/sass/filter.scss
+++ b/sass/filter.scss
@@ -25,6 +25,10 @@
   }
 
 }
+#filter{
+	margin-left: 100px;
+	
+}
 
 .select-cat {
   max-width: 250px;
@@ -85,6 +89,7 @@
   .select-btn {
     img {
       transform: rotate(-180deg);
+	 
     }
   }
 
