--- a/css/main.css
+++ b/css/main.css
@@ -183,17 +183,22 @@
 }
 
 .btn-photo {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 90px;
-  padding-left: 90px;
+  width: 25%;
+  display: flex;
+  height: 55px;
+  justify-content: center;
+  align-items: center;
   border: none;
   background-color: #D8D8D8;
-  border-radius: 3px;
+  border-radius: 4px;
   cursor: pointer;
   text-transform: none;
   text-decoration: none;
   color: black;
+}
+.btn-photo:hover {
+  background-color: black;
+  color: white;
 }
 
 /* .thumbnail-preview {
@@ -237,18 +242,28 @@ display: none; */
   justify-content: center;
 }
 .btn-cont .loadMore {
-  padding-top: 20px;
-  padding-bottom: 20px;
-  padding-right: 90px;
-  padding-left: 90px;
+  width: 25%;
+  display: flex;
+  height: 55px;
+  justify-content: center;
   border: none;
+  align-items: center;
   background-color: #D8D8D8;
-  border-radius: 3px;
+  border-radius: 4px;
   cursor: pointer;
   text-transform: none;
   text-decoration: none;
   color: black;
   margin: 0;
+}
+.btn-cont .loadMore:hover {
+  background-color: black;
+  color: white;
+}
+@media screen and (max-width: 576px) {
+  .btn-cont .loadMore {
+    width: 35%;
+  }
 }
 
 /* #overlay{
@@ -322,6 +337,10 @@ display: none; */
     opacity: 0;
   }
 }
+#filter {
+  margin-left: 100px;
+}
+
 .select-cat {
   max-width: 250px;
 }
@@ -471,6 +490,84 @@ display: none; */
 		-webkit-animation-fill-mode: both;
 	}
 } */
+@media screen and (max-width: 785px) {
+  .burgerMenu {
+    width: 50px;
+    height: 50px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    margin-top: 25px;
+    margin-right: 25px;
+  }
+}
+.burgerMenu .line {
+  width: 80%;
+  height: 2px;
+  margin-bottom: 10px;
+  background-color: black;
+  transition: all 0.3s linear;
+}
+
+.burgerMenu.active span.l2 {
+  opacity: 0;
+}
+.burgerMenu.active span.l1 {
+  transform: rotate(45deg) translate(6px, 11px);
+}
+.burgerMenu.active span.l3 {
+  transform: rotate(-45deg) translate(6px, -11px);
+}
+
+.navbar-nav {
+  display: flex;
+}
+@media screen and (max-width: 785px) {
+  .navbar-nav {
+    display: none;
+    flex-direction: column;
+    z-index: 999;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    background: red;
+    transition: top 1s ease;
+    position: absolute;
+    width: 100vw;
+    top: 105px;
+    margin: 0;
+    padding: 0;
+    padding-top: 130px;
+  }
+  .navbar-nav.active {
+    display: block;
+    animation: fadeMenu 3s forwards;
+  }
+}
+@media screen and (max-width: 785px) and (max-width: 785px) {
+  .navbar-nav a {
+    margin-right: 0;
+    padding-bottom: 30px;
+    font-size: 40px;
+    color: white !important;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+  }
+}
+@keyframes fadeMenu {
+  from {
+    opacity: 0;
+    transform: translateY(-100px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 :root {
   font-family: "Space Mono", sans-serif;
 }
@@ -492,44 +589,23 @@ body {
   height: 13px;
   margin-left: 100px;
 }
-#navigation .burgerMenu {
-  width: 50px;
-  height: 50px;
-  display: flex;
-  flex-direction: column;
-  cursor: pointer;
+@media screen and (max-width: 785px) {
+  #navigation #logo {
+    margin-left: 25px;
+    height: 11px;
+  }
 }
-#navigation .burgerMenu .line {
-  width: 100%;
-  height: 1.5px;
-  margin-bottom: 10px;
-  background-color: black;
-  transition: all 0.3s linear;
-}
-
-.navbar-nav {
-  display: flex;
+#navigation .navbar-nav {
   list-style: none;
   margin-right: 65px;
 }
-@media screen and (max-width: 785px) {
-  .navbar-nav {
-    flex-direction: column;
-    z-index: 10;
-  }
-}
-
-a {
+#navigation a {
   margin-right: 40px;
   text-decoration: none;
   color: black;
 }
-@media screen and (max-width: 785px) {
-  a {
-    display: flex;
-    align-items: center;
-    flex-direction: column;
-  }
+#navigation a:hover {
+  font-weight: bold;
 }
 
 /* .menu-full {
@@ -576,23 +652,27 @@ a {
 }
 
 .banner {
+  position: relative;
   text-align: center;
 }
 .banner img {
   position: relative;
-  height: 100vh;
-  width: 100%;
+  height: calc(56.25vw - 80px); /* Soustraire la hauteur de l'en-tête */
+  width: 100vw;
+  object-fit: cover;
 }
 .banner h1 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 64px;
+  font-size: 70px;
   -webkit-text-stroke: 1px white;
   color: transparent;
   font-style: oblique;
   font-weight: 500;
+  width: 100%;
+  margin: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
