--- a/sass/home.scss
+++ b/sass/home.scss
@@ -1,44 +1,59 @@
-#filter-photo {
-
-    margin-top: 50px;
-}
-
-
 .containerPhoto {
+    margin-left: 100px;
+    margin-right: 100px;
+    margin-top: 50px;
 
-
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    /* Deux colonnes */
-    //  gap: 10px; /* Espacement entre les images */ */ */
-    margin-top: 100px;
-
-
-}
-
-
-/* .photo-connexe{
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    gap: 30px;
-    width: 100%; 
-} */
-
-
-
-.related-photo {
-
-    .attachment-large {
-        width: 40vw;
-        /* La moitié de la largeur du viewport */
-        height: 40vw;
-        /* La moitié de la largeur du viewport, pour former un carré */
+    .containerPhoto {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        /* Espace entre les colonnes */
         object-fit: cover;
+   
+        
     }
 
-}
+    .imgPortfolio {
+        width: 48%;
+        gap: 50px;
+        /* Espace entre les images verticalement */
+        box-sizing: border-box;
+        /* Assurez-vous que les marges ne dépassent pas la largeur */
+        
+       margin: 0;
+       display: inline-block;
+    
+        
 
+
+            img {
+                max-width: 100%;
+                /* Pour s'assurer que les images ne dépassent pas leur conteneur */
+                max-height: 500px;
+                /* Conserver le rapport hauteur-largeur des images */
+
+              
+            
+            
+            }
+        }
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+//button lordmore
 .btn-cont {
     margin-bottom: 40px;
     margin-top: 40px;
@@ -66,8 +81,13 @@
             color: white;
         }
 
-        @media screen and (max-width: 576px) {
-            padding-left: 40px;
+        @media screen and (max-width: 992px) {
+            width: 40%;
+
+        }
+
+        @media screen and (min-width: 320px) and (max-width :576px) {
+            width: 50%;
         }
 
     }
