--- a/sass/main.scss
+++ b/sass/main.scss
@@ -128,12 +128,16 @@ a {
     position: relative;
     text-align: center;
 
+
     img {
         position: relative;
         height: calc((100vw / 16 * 9) - 80px); /* Soustraire la hauteur de l'en-tête */
       
         width: 100vw;
         object-fit: cover;
+      
+            
+        }
 
     }
 
@@ -152,7 +156,12 @@ a {
         width: 100%;
         margin: 0;
 
-
+        @media screen and (max-width:768px){
+            font-size: 45px;
+        }
+        @media screen and (max-width:576px){
+            font-size: 35px;
+        }
 
 
 
@@ -162,4 +171,3 @@ a {
 
 
     }
-}
