--- a/sass/navigation.scss
+++ b/sass/navigation.scss
@@ -1,3 +1,46 @@
+$color-arrow: black;
+
+
+
+.imageThumbnail{
+ img{
+  
+  
+  
+    
+    top: 0;
+    left: 0;
+   
+} 
+
+&.show-image {
+	display: block;
+}}
+.arrow{
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+
+    .prev-arrow
+   {
+        text-decoration: none;
+        color:$color-arrow;
+        font-size: 30px;
+     
+    }
+    .next-arrow{
+        text-decoration: none;
+        color:$color-arrow;
+     font-size: 30px;
+    }
+  
+}
+
+
+
+
+
+
 
 
 
@@ -20,12 +63,9 @@
     top: 0;
     left: 0;
     width: 100px; /* Ajustez la taille selon vos besoins */
-    /* height: auto;
+/* height: auto;
     background-color: rgba(255, 255, 255, 0.9);
     border: 1px solid #ddd;
     padding: 5px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     display: none; */
-
-  
-  
