--- a/sass/single.scss
+++ b/sass/single.scss
@@ -2,6 +2,7 @@
 
     margin-left: 100px;
     margin-right: 100px;
+    object-fit: cover;
 
     /* border-top: 1px solid blueviolet;
 box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
@@ -128,6 +129,7 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
 .photoApparente {
     margin-left: 100px;
     margin-right: 100px;
+ 
 
 }
 
@@ -143,7 +145,7 @@ box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px; */
     display: flex;
     justify-content: space-between;
     gap: 10px;
-
+    
 
 
 
